<resources>


    <string name="read_speed_slow">慢读</string>
    <string name="read_speed_fast">快读</string>
    <string name="read_auto_exit">退出自动阅读</string>

    <string name="use">使用</string>
    <string name="download">下载</string>

    <string name="loading_read_page">精彩内容即将呈现...</string>

    <string name="read_brightness_night">亮度</string>
    <string name="read_catalog">目录</string>
    <string name="read_bookmark">书签</string>
    <string name="read_changesource">换源</string>
    <string name="read_cache">缓存</string>
    <string name="read_feedback">报错</string>
    <string name="read_bottom_feedback">反馈</string>
    <string name="read_landscape">横屏</string>
    <string name="read_landscape_or_portrait">横/竖屏</string>
    <string name="read_portrait">竖屏</string>
    <string name="read_night_mode">夜间模式</string>
    <string name="read_savepower_mode">省电模式</string>
    <string name="reading_brightness_system">系统</string>
    <string name="read_pagemode_slide">滑动</string>
    <string name="read_pagemode_fangzhen">仿真</string>
    <string name="read_pagemode_translation">平移</string>
    <string name="read_pagemode_updown">上下</string>
    <string name="read_changesource_tip">请到阅读页切源</string>
    <string name="text_hint_info">加入书架后, 可从书架找到这本书,方便阅读!</string>
    <string name="text_no_hint">不再接收此提示</string>
    <string name="translate_code_read">
        您将查看的本小说内容由第三方网站提供，本软件仅提供技术转码服务，以便给您更好的阅读体验，您也可根据页面指引直接浏览原网页。
    </string>
    <string name="reading_add_succeed">已添入书架</string>
    <string name="reading_add_fail">抱歉,添加书架失败,请重试</string>
    <string name="is_first_chapter">当前已经是第一章</string>
    <string name="book_end_change_source">更换来源</string>


    <string name="module_name">阅读器</string>

    <string name="translate_code">转码声明</string>
    <string name="disclaimer_statement">服务声明</string>
    <string name="login_service_policy">服务条款</string>
    <string name="login_privacy_policy">隐私条款</string>


    <string name="translate_code_description">
        "      "由于目前绝大多数WAP网页不能被智能移动终端正常浏览，因此，为提升用户体验，本软件有必要对WAP网页进行格式转换。\n
        "      "转码后您浏览的页面内容仍系来源于第三方，本软件不保证被链接内容的安全性、合法性，同时在转码过程中本软件不会对第三方网站内容做任何实质性修改或编辑。\n
        "      "如您希望以传统方式查看网页内容或转码页面存在问题，请您直接点击本软件提示的来源地址访问原网站。本软件不保证被链接内容的安全性、合法性，您可以直接访问第三方网页获取相应的信息内容。\n
    </string>

    <string name="service_policy_description">
        服务条款
    </string>
    <string name="privacy_policy_description">
        隐私条款
    </string>

    <string name="reader_slogan">全本小说免费看</string>

    <string name="feedback">反馈</string>

    <string name="feedback_chapter_empty">当前章节为空、乱码</string>
    <string name="feedback_reading_cache_error">书籍缓存后无法阅读</string>
    <string name="feedback_chapter_content_repeat">章节或内容重复</string>
    <string name="feedback_chapter_sequence_error">章节顺序错误</string>
    <string name="feedback_chapter_content_error">内容错字、少字</string>
    <string name="feedback_typesetting_error">段落排版内容</string>
    <string name="feedback_cache_fail">缓存失败</string>


    <string name="original_web_page">原网页</string>

    <string name="chapter">章节</string>

    <string name="positive_order">正序</string>
    <string name="reverse_order">倒序</string>


    <string name="catalog">目录</string>
    <string name="bookmark">书签</string>
    <string name="bookmark_empty">没有书签</string>

    <string name="auto_read_speed">自动翻页速度:</string>

    <string name="accelerate">加速</string>
    <string name="decelerate">减速</string>

    <string name="accelerate_plus">加速 +</string>
    <string name="decelerate_des">减速 -</string>

    <string name="previous_chapter">上一章</string>
    <string name="next_chapter">下一章</string>

    <string name="night">夜间</string>
    <string name="setting">设置</string>

    <string name="brightness">亮度</string>
    <string name="system">系统</string>
    <string name="follow_system">跟随系统</string>
    <string name="default_font">默认字体</string>
    <string name="text_size">字号</string>
    <string name="background">背景</string>
    <string name="spacing">间距</string>
    <string name="paging">翻页</string>
    <string name="pattern">模式</string>

    <string name="animation_slide">滑动</string>
    <string name="animation_simulation">仿真</string>
    <string name="animation_translation">平移</string>
    <string name="animation_up_down">上下</string>

    <string name="landscape_portrait">横/竖屏</string>
    <string name="auto_read">自动阅读</string>
    <string name="full_screen">全屏翻页</string>

    <string name="change_source">换源</string>
    <string name="insert_bookmark">添加书签</string>
    <string name="remove_bookmark">删除书签</string>
    <string name="book_detail">书籍详情</string>


    <string name="change_source_prompt">
        您将查看的本小说内容由第三方网站提供，本软件仅提供技术转码服务，以便给您更好的阅读体验，您也可根据页面指引直接浏览原网页。
    </string>

    <string name="reading_continue">继续阅读</string>
    <string name="not_show_next_time">下次不再提示</string>
    <string name="skip_chapter">跳过此章</string>

    <string name="refresh">刷新</string>

    <string name="loading_prompt">精彩内容即将呈现...</string>
    <string name="reader_loading_prompt">精彩内容即将呈现</string>
    <string name="reader_reload_prompt">重新加载</string>

    <string name="network_error">好像没有网络！</string>

    <string name="cache_method">缓存方式</string>
    <string name="cache_all_chapter">全部缓存</string>
    <string name="cache_start_current">从当前章节缓存</string>


    <string name="source_recommend">[推荐]</string>
    <string name="source_new">最新</string>

    <string name="auto_read_prompt">翻页太麻烦，开启自动阅读</string>
    <string name="not_receive_prompt">不再接收此提示</string>

    <string name="add_shelf_prompt">喜欢就加入书架吧～</string>
    <string name="add_shelf">加入书架</string>
</resources>