<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/ll_header_more_content"
    tools:ignore="RtlHardcoded,RtlSymmetry,MissingPrefix,">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/reader_option_header_popup_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_reader_change_source"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:soundEffectsEnabled="true"
            android:text="@string/change_source"
            android:textColor="#99A0AA"
            app:onPressChangeAlpha="true"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/txt_reader_book_mark"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:soundEffectsEnabled="true"
            android:text="@string/bookmark"
            android:textColor="#99A0AA"
            app:onPressChangeAlpha="true"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/txt_reader_feedback"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:soundEffectsEnabled="true"
            android:text="@string/feedback"
            android:textColor="#99A0AA"
            app:onPressChangeAlpha="true"
            android:textSize="12sp"/>

    </LinearLayout>

    <net.lzbook.kit.book.view.NightShadowView
        android:id="@+id/nightShadowView"
        android:layout_width="120dp"
        android:layout_height="135dp"
        android:visibility="gone"
        app:cornerRadius="3dp"/>
</FrameLayout>