<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="296dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#00000000"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:ignore="RtlHardcoded">

    <RelativeLayout
        android:id="@+id/ll_feedback_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/reader_feedback_bg"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/feedback"
            android:textColor="#282828"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <ScrollView
            android:id="@+id/sv_feedback_content"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:layout_below="@+id/dialog_title"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        style="@style/reader_feedback_txt_style"
                        android:text="@string/feedback_chapter_empty"/>

                    <CheckBox
                        android:id="@+id/cb_feedback_chapter_empty"
                        style="@style/reader_feedback_check_style"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        style="@style/reader_feedback_txt_style"
                        android:text="@string/feedback_reading_cache_error"/>

                    <CheckBox
                        android:id="@+id/cb_feedback_reading_cache_error"
                        style="@style/reader_feedback_check_style"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        style="@style/reader_feedback_txt_style"
                        android:text="@string/feedback_chapter_content_repeat"/>

                    <CheckBox
                        android:id="@+id/cb_feedback_chapter_content_repeat"
                        style="@style/reader_feedback_check_style"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        style="@style/reader_feedback_txt_style"
                        android:text="@string/feedback_chapter_sequence_error"/>

                    <CheckBox
                        android:id="@+id/cb_feedback_chapter_sequence_error"
                        style="@style/reader_feedback_check_style"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        style="@style/reader_feedback_txt_style"
                        android:text="@string/feedback_chapter_content_error"/>

                    <CheckBox
                        android:id="@+id/cb_feedback_chapter_content_error"
                        style="@style/reader_feedback_check_style"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="13dp">

                    <TextView
                        style="@style/reader_feedback_txt_style"
                        android:text="@string/feedback_typesetting_error"/>

                    <CheckBox
                        android:id="@+id/cb_feedback_typesetting_error"
                        style="@style/reader_feedback_check_style"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="15dp"
                    android:paddingTop="13dp">

                    <TextView
                        style="@style/reader_feedback_txt_style"
                        android:text="@string/feedback_cache_fail"/>

                    <CheckBox
                        android:id="@+id/cb_feedback_cache_fail"
                        style="@style/reader_feedback_check_style"/>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>


        <Button
            android:id="@+id/btn_feedback_cancel"
            android:layout_width="108dp"
            android:layout_height="38dp"
            android:layout_below="@+id/sv_feedback_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/reader_dialog_cancel_sel"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#3ECC96"
            android:textSize="16sp"
            app:onPressChangeAlpha="true"
            tools:ignore="MissingPrefix"/>

        <Button
            android:id="@+id/btn_feedback_submit"
            android:layout_width="108dp"
            android:layout_height="38dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/sv_feedback_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/reader_dialog_confirm_sel"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:onPressChangeAlpha="true"
            tools:ignore="MissingPrefix"/>

    </RelativeLayout>

    <net.lzbook.kit.widget.NightShadowView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/ll_feedback_content"
        android:layout_alignLeft="@id/ll_feedback_content"
        android:layout_alignRight="@id/ll_feedback_content"
        android:layout_alignTop="@id/ll_feedback_content"
        android:visibility="gone"
        app:cornerRadius="4dp"/>
</RelativeLayout>