<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2212020"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded, RtlSymmetry">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#333130"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="18dp">

        <TextView
            android:id="@+id/txt_auto_read_prompt"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:paddingRight="8dp"
            android:text="@string/auto_read_speed"
            android:textColor="#707070"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/txt_auto_read_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#C2B282"
            android:textSize="16sp"
            tools:text="8"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_speed_decelerate"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@drawable/reader_option_auto_read_button_bg"
            android:gravity="center"
            android:text="@string/decelerate"
            android:textColor="@color/reader_option_auto_read_txt_sel"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/txt_speed_accelerate"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@drawable/reader_option_auto_read_button_bg"
            android:gravity="center"
            android:text="@string/accelerate"
            android:textColor="@color/reader_option_auto_read_txt_sel"
            android:textSize="14sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_auto_read_stop"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/reader_option_auto_read_button_bg"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/reader_option_auto_read_txt_sel"
        android:textSize="14sp"/>
</LinearLayout>